# Gen_AI_Assessment

./: README.md  main.py  pyproject.toml  retrieval_benchmark.json  retrieval_benchmark.md
benchmark/: benchmarker.py
data/: corpus.py
embedder/: embedder.py
mocks/: vertex_mocks.py
retrieval/: strategy_a.py  strategy_b.py
store/: vector_store.py
tests/: test_embedder.py  test_store.py
